[tool.poetry]
name = "promtstd"
version = "1.0.1"
description = "promtstd robot - универсальный стандарт для хранения и использования промтов в AI. books Основан на Markdown, обеспечивает легкость чтения и структурированность. "
authors = ["Denis Kustov <pro-progerkustov@yandex.ru>"]
readme = "README.md"
homepage = "https://github.com/denisxab/promtstd"
repository = "https://github.com/denisxab/promtstd"
keywords=[
    "стандарт промтов",
    "promtstd",
    "promt",
    "ai",
    "хранение промтов",
    "использование промтов",
    "разработка AI",
    "искусственный интеллект",
    "Markdown",
    "унификация",
    "структурирование",
    "синтаксис",
    "взаимодействие разработчиков",
    "метаинформация",
    "шаблоны",
    "примеры",
    "вспомогательные промты"
]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
autoflake = "^2.0.2"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
